feature: spi